--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
   --system-ui: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   --color-body: hsl(0, 0%, 20%);
+  --color-button: hsl(0, 0%, 15%);
+  --color-button-hover: hsl(0, 0%, 25%);
   --color-font-dark: hsl(0, 0%, 10%);
   --color-font-light: hsl(0, 0%, 85%);
   --color-header: hsl(227, 7%, 58%);
@@ -60,6 +62,10 @@ main {
   padding: 2vmin;
 }
 
+.current-weather {
+  display: flex;
+}
+
 .current-temperature {
   font-size: 4rem;
 }
@@ -67,4 +73,33 @@ main {
 .current-temperature::after,
 .feels-like-temperature::after {
   content: '°';
+}
+
+.feels-like {
+  font-style: italic;
+}
+
+.temperature-controls {
+  border-radius: 100px;
+  display: inline-flex;
+  justify-content: flex-start;
+  margin-top: 1rem;
+  overflow: hidden;
+}
+
+.temperature-button {
+  background: var(--color-button);
+  border: 0;
+  color: var(--color-font-light);
+  font-weight: bold;
+  padding: 0.4rem 1rem;
+}
+
+.temperature-button:hover {
+  background: var(--color-button-hover);
+  cursor: pointer;
+}
+
+.temperature-button.selected {
+  background: var(--color-button-hover);
 }
